Added "restart" and "quit" buttons to game.html

--- a/Fun_game/flask_app/testing/html-andrea/game.html
+++ b/Fun_game/flask_app/testing/html-andrea/game.html
@@ -21,5 +21,19 @@
         <p class="gametext">>>> Yes</p>
         <p class="gametext">>>> No</p>
     </section>
+
+    <section id="interrupt_buttons">
+        <section>
+        <a href="home.html">
+            <button class="button">RESTART</button>
+        </section>
+        <section>
+        <a href="gameover.html">
+            <button class="button">QUIT</button>
+        </section>
+    </section>
+
+
+
 </body>
 </html>
